# Pong2

./: CMakeLists.txt  README.md  main.cpp
include/entities/: Ball.h  Paddle.h
include/game/: Game.h
include/ui/: ScoreBoard.h
src/entities/: Ball.cpp  Paddle.cpp
src/game/: Game.cpp
src/ui/: ScoreBoard.cpp
